--- a/todo.html
+++ b/todo.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="todo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="todo.css">
 </head>
 <body>
-    <div class="maindiv">
-      <div class="seconddiv" > <input type="text" id="in" placeholder="add a task">
-        <button id="button" onclick="addT()">+</button>
-        <ul id="li"></ul>
-        <button id="mood" onclick="">change mood</button>
-      </div>
-   
-    </div>
+  <div class="main">
+ 
+  <input type="text" id="in">
+  <button id="bu" onclick="todos()">+</button>
 
-    <script src="todo.js"></script>
+
+  <ol id="list">ADD TASK</ol>
+
+<button id="mood" onclick="moodch()">switch mood</button>
+
+</div>
+  <div class="second">
+  <ol id="co">COMPLITE TASK</ol>
+  </div>
+   
+   
+  
+
+  <script src="todo.js"></script>
 </body>
 </html>
